@@ -104,7 +104,7 @@ dnl Checks for libraries and headers
 RB_CHECK_OGREMAIN
 RB_CHECK_PLSM2
 RB_CHECK_LIBOIS
-RB_CHECK_LIBFOX
+RB_CHECK_LIBFOX(1.6)
 RB_CHECK_LIBCURL
 dnl RB_CHECK_LIBSLANG Only used by terminalAPI
 RB_CHECK_BOOST_FS
