@@ -9,7 +9,8 @@ rainbrurpg_editor_LDADD=-lQtCore -lQtGui 		\
 			-L$(top_srcdir)/common/.libs 	\
 			-L$(top_srcdir)/design/.libs 	\
 			-L$(top_srcdir)/maincore/.libs	\
-			-L$(top_srcdir)/ogreGui/.libs
+			-L$(top_srcdir)/ogreGui/.libs	\
+			$(OIS_LIBS)
 
 OGRE_CFLAGS= -I/usr/local/include/OGRE
 
@@ -17,9 +18,9 @@ INCLUDES = -I$(top_srcdir)/common/ 			\
 	   -I$(top_srcdir)/maincore/ 			\
 	   -I$(top_srcdir)/design/ 			\
 	   -I$(top_srcdir)/ogreGui/			\
-           -I/usr/include/qt4/QtGui -I/usr/include/qt4 \
-           -I/usr/include/qt4/QtCore \
-	    $(shell pkg-config OGRE --cflags) 
+           -I/usr/include/qt4/QtGui -I/usr/include/qt4  \
+           -I/usr/include/qt4/QtCore 			\
+	    $(shell pkg-config OGRE --cflags) $(OIS_CFLAGS)
 
 # You have two .cpp files you wrote, myapp.cpp and another.cpp
 # Remember to include the name of the resource file with the .cpp extension.
